# Project-Delta

./: .gitignore  Cargo.toml  LICENSE  Plan.md  README.md  icon.ppm  image_generator.py  out
.github/workflows/: main_workflow.yml
common/: Cargo.toml
common/src/: lib.rs
ecs/: Cargo.toml
ecs/src/: component_registry.rs  entity.rs  error.rs  lib.rs  query.rs  world.rs
ecs/src/commands/: command.rs  command_buffer.rs  mod.rs
ecs/src/component/: mod.rs  registry.rs  storage.rs
ecs/src/query/: macros.rs  mod.rs
examples/game/: Cargo.toml
examples/game/src/: camera_controller.rs  editor.rs  game_context.rs  main.rs
examples/runtime/: Cargo.toml
examples/runtime/src/: camera_controller.rs  editor.rs  main.rs  physics_context.rs
game-engine/: Cargo.toml  build.rs
game-engine/src/: context.rs  engine.rs  error.rs  lib.rs  physics.rs  physics_systems.rs  renderer.rs  rendering_systems.rs  shader.wgsl  time.rs
game-engine/src/physics/: box.rs  collision.rs  sphere.rs
game-engine/src/physics/box/: collision.rs  mesh.rs  sat.rs
game-engine/src/physics/sphere/: collision.rs
game-engine/src/renderer/: model.rs  texture.rs
game_engine/: Cargo.toml
ide/: .gitignore  Cargo.toml  package.json
ide/src/: App.scss  App.tsx  camera_controller.rs  editor.rs  im.rs  index.css  main.rs  physics_context.rs  window.rs
ide/src-tauri/: tauri.conf.json
ide/src-tauri/icons/: icon.icns
ide/src-tauri/src/: main.rs
ide/src/components/: GameControl.tsx  Header.scss  Header.tsx  ObjectList.tsx
ide/src/views/: Main.scss  Main.tsx
physics/: Cargo.toml
physics/src/: box.rs  collision.rs  cube.rs  lib.rs  raycast.rs  rigidbody.rs  sphere.rs  systems.rs
physics/src/box/: collision.rs  mesh.rs  sat.rs
physics/src/cube/: collision.rs  mesh.rs  sat.rs
physics/src/sphere/: collision.rs
rendering/: Cargo.toml  bindless_shader.wgsl  deferred.wgsl  egui_shader.wgsl  gbuffer_copy.wgsl  shader.wgsl
rendering/shaders/: deferred-light.wgsl  line_shader.wgsl  shader.wgsl
rendering/src/: camera.rs  error.rs  lib.rs  model.rs  range.rs  renderer.rs  texture.rs  ui.rs
rendering/src/renderer/: gbuffer.rs  world.rs
res/: ball.mtl  cube.mtl
res/balls/: 0.mtl  1.mtl  10.mtl  11.mtl  12.mtl  13.mtl  14.mtl  15.mtl  2.mtl  3.mtl  4.mtl  5.mtl  6.mtl  7.mtl  8.mtl  9.mtl
