[package]
name = "game-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.4"
wgpu = "0.12.0"
pollster = "0.2"
thiserror = "1"
vek = "0.15.6"
bytemuck = { version = "1.4", features = [ "derive" ] }
tobj = "3.2.1"
image = "0.24.1"
