[package]
name = "ide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
game-engine = { path = "../game-engine" }
image = "0.24.1"
log = "0.4.14"
vek = "0.15.6"

[dependencies.winit]
version = "0.26"
default-features = false
features = ["x11"]
