[package]
name = "ide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-engine = { path = "../../game-engine" }
common = { path = "../../common" }
env_logger = "0.9.0"
image = "0.24.1"
log = "0.4.14"
thiserror = "1.0"
raw-window-handle = "0.4"
anyhow = "1.0"
egui = "0.17"
egui-winit = "0.17"
rand = "0.8.5"

[dependencies.winit]
version = "0.26"
default-features = false
features = ["x11"]
